js262/test/language/statements/await-using/syntax/without-initializer-do-statement-while-expression.js


/*---
esid: sec-do-while-statement
description: >
    await using declarations without initialisers in statement positions:
    do Statement while ( Expression )
negative:
  phase: parse
  type: SyntaxError
features: [explicit-resource-management]
---*/

$DONOTEVALUATE();
async function f() {
  do await using x; while (false)
}
